<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="NunitoSans-SemiBold.ttf">
            <string>NunitoSans-SemiBold</string>
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListWeatherViewController" customModule="TestNABWeather" customModuleProvider="target">
            <connections>
                <outlet property="btnCancel" destination="ArR-oI-xn7" id="AIA-gf-gLC"/>
                <outlet property="btnSetting" destination="GGT-yP-KsK" id="KWI-qD-qmJ"/>
                <outlet property="tableView" destination="9hq-lN-4aR" id="87x-ue-WsX"/>
                <outlet property="tfSearch" destination="gwp-pe-7o1" id="jt0-wh-vUO"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Forecast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbu-oR-Ej9">
                    <rect key="frame" x="142.5" y="54" width="129" height="22"/>
                    <fontDescription key="fontDescription" name="NunitoSans-SemiBold" family="Nunito Sans" pointSize="16"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="91f-wF-Te6">
                    <rect key="frame" x="0.0" y="86" width="414" height="60"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArR-oI-xn7">
                            <rect key="frame" x="356" y="15" width="48" height="30"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="48" id="Vz5-uA-iPr"/>
                            </constraints>
                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                            <state key="normal" title="Cancel"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btnCancel"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="btnCancelTouchUpInside:" destination="-1" eventType="touchUpInside" id="ZiE-T4-DQQ"/>
                            </connections>
                        </button>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nbk-7K-mC8">
                            <rect key="frame" x="10" y="5" width="336" height="50"/>
                            <subviews>
                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-search" translatesAutoresizingMaskIntoConstraints="NO" id="PGF-j4-vVU">
                                    <rect key="frame" x="20" y="18" width="14" height="14"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="14" id="F2W-4c-6D0"/>
                                        <constraint firstAttribute="width" constant="14" id="Wfy-hx-sz2"/>
                                    </constraints>
                                </imageView>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="gwp-pe-7o1">
                                    <rect key="frame" x="44" y="16" width="282" height="18"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits"/>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                            <real key="value" value="8"/>
                                        </userDefinedRuntimeAttribute>
                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="tf_search"/>
                                    </userDefinedRuntimeAttributes>
                                </textField>
                            </subviews>
                            <color key="backgroundColor" red="0.90588235859999999" green="0.9098039269" blue="0.91372549530000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <constraints>
                                <constraint firstItem="gwp-pe-7o1" firstAttribute="top" secondItem="nbk-7K-mC8" secondAttribute="top" constant="16" id="Cbt-UN-pTe"/>
                                <constraint firstItem="gwp-pe-7o1" firstAttribute="leading" secondItem="PGF-j4-vVU" secondAttribute="trailing" constant="10" id="YyK-de-T0p"/>
                                <constraint firstAttribute="trailing" secondItem="gwp-pe-7o1" secondAttribute="trailing" constant="10" id="Yzj-za-QUz"/>
                                <constraint firstItem="gwp-pe-7o1" firstAttribute="centerY" secondItem="nbk-7K-mC8" secondAttribute="centerY" id="dOb-SZ-9xY"/>
                                <constraint firstItem="PGF-j4-vVU" firstAttribute="centerY" secondItem="nbk-7K-mC8" secondAttribute="centerY" id="ekB-k9-POH"/>
                                <constraint firstItem="PGF-j4-vVU" firstAttribute="leading" secondItem="nbk-7K-mC8" secondAttribute="leading" constant="20" id="f8t-VO-4Xr"/>
                            </constraints>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                    <real key="value" value="8"/>
                                </userDefinedRuntimeAttribute>
                            </userDefinedRuntimeAttributes>
                        </view>
                    </subviews>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <constraints>
                        <constraint firstItem="nbk-7K-mC8" firstAttribute="leading" secondItem="91f-wF-Te6" secondAttribute="leading" constant="10" id="OtM-Eb-xGc"/>
                        <constraint firstItem="ArR-oI-xn7" firstAttribute="centerY" secondItem="91f-wF-Te6" secondAttribute="centerY" id="Qpd-Dq-RBf"/>
                        <constraint firstItem="ArR-oI-xn7" firstAttribute="leading" secondItem="nbk-7K-mC8" secondAttribute="trailing" constant="10" id="Soq-kq-tso"/>
                        <constraint firstAttribute="bottom" secondItem="nbk-7K-mC8" secondAttribute="bottom" constant="5" id="YPD-7O-Lhn"/>
                        <constraint firstAttribute="height" constant="60" id="bsM-Wf-LZj"/>
                        <constraint firstItem="nbk-7K-mC8" firstAttribute="top" secondItem="91f-wF-Te6" secondAttribute="top" constant="5" id="gto-YU-2Qi"/>
                        <constraint firstAttribute="trailing" secondItem="ArR-oI-xn7" secondAttribute="trailing" constant="10" id="lHh-se-scy"/>
                    </constraints>
                </view>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9hq-lN-4aR">
                    <rect key="frame" x="0.0" y="146" width="414" height="716"/>
                    <color key="backgroundColor" red="0.85490196939999996" green="0.85490196939999996" blue="0.85490196939999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="table_weather"/>
                    </userDefinedRuntimeAttributes>
                </tableView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGT-yP-KsK">
                    <rect key="frame" x="369" y="45" width="40" height="40"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="h9f-cz-fwd"/>
                        <constraint firstAttribute="width" constant="40" id="ufc-oU-o22"/>
                    </constraints>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                    <state key="normal" image="ic-settings"/>
                    <connections>
                        <action selector="btnSettingTouchUpInside:" destination="-1" eventType="touchUpInside" id="nTG-n1-fin"/>
                    </connections>
                </button>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="9hq-lN-4aR" firstAttribute="top" secondItem="91f-wF-Te6" secondAttribute="bottom" id="3Ux-O0-EtP"/>
                <constraint firstItem="pbu-oR-Ej9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="9GK-dY-3vK"/>
                <constraint firstItem="GGT-yP-KsK" firstAttribute="centerY" secondItem="pbu-oR-Ej9" secondAttribute="centerY" id="Fiq-kc-k98"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="GGT-yP-KsK" secondAttribute="trailing" constant="5" id="Ncx-fw-AXg"/>
                <constraint firstItem="91f-wF-Te6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Taj-y5-247"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="9hq-lN-4aR" secondAttribute="bottom" id="bIC-tL-OvI"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="91f-wF-Te6" secondAttribute="trailing" id="inb-zS-cxy"/>
                <constraint firstItem="pbu-oR-Ej9" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="nPE-ee-zAJ"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9hq-lN-4aR" secondAttribute="trailing" id="xAf-5s-WEu"/>
                <constraint firstItem="91f-wF-Te6" firstAttribute="top" secondItem="pbu-oR-Ej9" secondAttribute="bottom" constant="10" id="xXO-xR-9Zi"/>
                <constraint firstItem="9hq-lN-4aR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="z0S-xz-QkR"/>
            </constraints>
            <point key="canvasLocation" x="131.8840579710145" y="49.553571428571423"/>
        </view>
    </objects>
    <resources>
        <image name="ic-search" width="15" height="15"/>
        <image name="ic-settings" width="24" height="24"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
